tests/sema/fail/v4_fail_builtin_redefinition.ep
# COMPILE_FAIL: reserved builtin function name: len
fun len(): i64 {
    ret 1
}

fun main(): i64 {
    ret 0
}
